# Finite-Element-Method-Toolbox

./: LICENSE  README.md
fem_toolbox/: pyproject.toml
fem_toolbox/femtoolbox/: __init__.py  __main__.py
fem_toolbox/femtoolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fem_toolbox/femtoolbox/core/: __init__.py  adapt.py  advisor.py  assembly.py  basis.py  domain.py  error.py  export.py  forms.py  mesh.py  pde.py  solution.py  solver.py  space.py  utils.py
fem_toolbox/femtoolbox/examples/: run_advection_dg.py  run_poisson.py
fem_toolbox/femtoolbox/gui/: __init__.py  app.py
fem_toolbox/femtoolbox/tests/: test_smoke.py
fem_toolbox/tests/: test_smoke.py
