[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "femtoolbox"
version = "1.1.0"
description = "Portfolio FEM toolbox with CG/DG, advisor logic, adaptivity hooks, and Tk GUI."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[project.scripts]
fem-toolbox = "femtoolbox.gui.app:main"

[tool.setuptools.packages.find]
include = ["femtoolbox*"]
